--- a/FeedBuilder/App.config
+++ b/FeedBuilder/App.config
@@ -2,13 +2,14 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="My.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="FeedBuilder.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup>
         
     <supportedRuntime version="v2.0.50727"/></startup>
-    <userSettings>
+    <userSettings>        
         <FeedBuilder.My.MySettings>
             <setting name="BaseURL" serializeAs="String">
                 <value/>
@@ -34,9 +35,17 @@
             <setting name="FeedXML" serializeAs="String">
                 <value/>
             </setting>
+            <setting name="IgnoreFiles" serializeAs="Xml">
+              <value>
+                <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                    xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                  <string />
+                </ArrayOfString>
+              </value>
+            </setting>
             <setting name="IgnoreDebugSymbols" serializeAs="String">
                 <value>True</value>
-            </setting>
+            </setting>          
             <setting name="IgnoreVsHosting" serializeAs="String">
                 <value>True</value>
             </setting>
